--- a/src/components/Sections/VideoSection2.module.css
+++ b/src/components/Sections/VideoSection2.module.css
@@ -11,20 +11,37 @@
   position: relative;
 }
 
+.video-wrapper video {
+  position: relative;
+  z-index: 3;
+}
+
 .video-wrapper div {
-  width: 300px;
-  height: 400px;
+  width: 250px;
+  height: 370px;
   background-color: var(--main-clr);
   position: absolute;
   top: 50%;
-  left: 50px;
-  transform: translateY(-50%) rotate(30deg);
-  z-index: -1;
+  left: 80px;
+  transform: translateY(-50%) rotate(35deg);
+  z-index: 2;
+  box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.5s;
+}
+
+.video-wrapper div:hover {
+  transform: translateY(-50%) rotate(40deg);
 }
 
 @media only screen and (max-width: 1300px) {
   .video-wrapper {
     padding: 0 7rem;
+  }
+
+  .video-wrapper div {
+    width: 200px;
+    height: 300px;
+    left: 20px;
   }
 }
 
@@ -32,11 +49,29 @@
   .video-wrapper {
     padding: 0 4rem;
   }
+
+  .video-wrapper div {
+    width: 170px;
+    height: 270px;
+    left: 20px;
+  }
 }
 
 @media only screen and (max-width: 650px) {
   .video-wrapper {
     padding: 0 1rem;
+  }
+
+  .video-wrapper div {
+    width: 80px;
+    height: 110px;
+    top: 10%;
+    left: -10px;
+  }
+
+  .video-wrapper div {
+    /* display: none;
+    visibility: hidden; */
   }
 }
 
